<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Weather_Today"
    android:background="@color/background"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_margin="10dp"
       android:layout_gravity="center"
       android:gravity="center">

       <EditText
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:hint="@string/city_name"
           android:id="@+id/cityNameID"
           android:paddingLeft="20sp"
           android:layout_marginHorizontal="30dp"
           android:background="@color/white" />

       <Button
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:text="@string/show_result"
           android:id="@+id/showResultID"
           android:layout_marginHorizontal="110dp"
           android:backgroundTint="#0E86D4"
           android:layout_marginTop="30dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="30dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/temperature_in_centrigrade"
               android:textSize="20sp"
               android:id="@+id/tempCentrigradeID"
               android:textColor="@color/black"
               android:layout_marginLeft="30dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
               android:textSize="20sp"
               android:id="@+id/tempCentrigradeValueID"
               android:textColor="@color/black"
               android:layout_marginLeft="30dp"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/temperature_in_fahrenheit"
               android:textSize="20sp"
               android:id="@+id/tempFahren"
               android:textColor="@color/black"
               android:layout_marginLeft="30dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
               android:textSize="20sp"
               android:id="@+id/tempFahrenValue"
               android:textColor="@color/black"
               android:layout_marginLeft="30dp"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/latitude"
               android:textSize="20sp"
               android:id="@+id/latitudeID"
               android:textColor="@color/black"
               android:layout_marginLeft="30dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
               android:textSize="20sp"
               android:id="@+id/latitudeValueID"
               android:textColor="@color/black"
               android:layout_marginLeft="150dp"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/longitude"
               android:textSize="20sp"
               android:id="@+id/longitudeID"
               android:textColor="@color/black"
               android:layout_marginLeft="30dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
               android:textSize="20sp"
               android:id="@+id/longitudeValueID"
               android:textColor="@color/black"
               android:layout_marginLeft="130dp"/>

       </LinearLayout>

   </LinearLayout>

</LinearLayout>